force-app/main/default/objects/Property_Tracing__c/Property_Tracing__c.object-meta.xml
<CustomObject>
    <label>Property Tracing Request</label>
    <nameField>
        <displayFormat>PT-{0000000000}</displayFormat>
        <label>Property Tracing Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Tracing Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>