force-app/main/default/objects/Property_Tracing__c/fields/Metrics__c.field-meta.xml
<CustomField>
    <fullName>Metrics__c</fullName>
    <label>Metrics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>