force-app/main/default/objects/Property_Tracing__c/fields/Tracing_Status__c.field-meta.xml
<CustomField>
    <fullName>Tracing_Status__c</fullName>
    <label>Tracing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>